JPackage Gradle Plugin 1.5.0
* Introduced jpackage version check for parameters
* Added:
  --about-url
  --app-content
  --bind-services
  --jlink-options
  --launcher-as-service
  --linux-package-deps
  --mac-app-category
  --mac-app-store
  --mac-dmg-content
  --mac-entitlements
  --win-help-url
  --win-shortcut-prompt
  --win-update-url